# deep_learning_school

./: README.md
pre_commit_hook/: nbconvert.py
semester_1/: README.md
speech_recognition/week3/homework/audiossl/: pyproject.toml
speech_recognition/week3/homework/audiossl/audiossl/data/: __init__.py  augmentation.py  dataset.py
speech_recognition/week3/homework/audiossl/audiossl/evaluation/: compare_models.py  confusion_matrix.py  visualize_embeddings.py
speech_recognition/week3/homework/audiossl/audiossl/losses/: __init__.py  classification.py  infonce.py  ncl_losses.py
speech_recognition/week3/homework/audiossl/audiossl/modeling/: __init__.py  contrastive.py  encoders.py  ncl.py  projectors.py  supervised.py  transformer.py
speech_recognition/week3/homework/audiossl/audiossl/training/: __init__.py  contrastive.py  joint_training.py  linear_head.py  simsiam.py  supervised.py
speech_recognition/week3/homework/audiossl/audiossl/utils/: __init__.py  callbacks.py  notebook_utils.py  training_utils.py  wandb_utils.py
speech_recognition/week3/homework/audiossl/scripts/: compare_results.py  make_hf_dataset.py  run_fixed_experiments.sh  train_contrastive.py  train_contrastive_modified.py  train_joint_contrastive.py  train_simsiam.py  train_supervised.py  train_transformer.py  train_wav2vec2_hf.py
speech_recognition/week3/homework/audiossl/scripts/run_experiments/: 00_run_all_tests.sh  01_test_supervised.sh  02_train_supervised.sh  03_test_contrastive.sh  04_train_contrastive.sh  05_test_simsiam.sh  06_train_simsiam.sh  07_run_all_experiments.sh  README.md
(+104 files in other folders)
